# unix-chat

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: chat_loop.rs  client.rs  completer.rs  config.rs  crypto.rs  error.rs  init.rs  key_exchange.rs  lib.rs  list.rs  main.rs  permissions.rs  protocol.rs  relay.rs  server.rs  signal.rs  slash_commands.rs  topic.rs
