[package]
name = "unix-chat"
version = "0.11.0"
edition = "2024"
license = "MIT"
keywords = ["chat", "unix", "e2ee", "local", "file-transfer"]
description = "A peer-to-peer encrypted chat system for local users on the same machine, using Unix sockets and e2e encryption"

[[bin]]
name = "uc"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
hkdf = "0.12"
libc = "0.2"
signal-hook = "0.3"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand = "0.9"
rpassword = "5"
rustyline = "15"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
